--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,13 +1,30 @@
 span {
   white-space: pre;
+}
+
+.fillParent {
+  width: 100%;
+}
+
+textarea {
+  height: 600px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+span, textarea {
   font: 20px consolas;
 }
 
+button.debugger {
+  width: 20%;
+}
+
 button {
-  width: 25%;
-  padding: 5px 10px;
   margin-bottom: 10px;
   box-shadow: none;
+  padding: 5px 10px;
 }
 
 button:hover {
