readd edwards work

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -27,6 +27,10 @@ button {
   padding: 5px 10px;
 }
 
+#inputbutton, #evalbutton {
+  height: 34px;
+}
+
 button:hover {
   background-color: #ccc;
   cursor: pointer;
